default/imagesweserv/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: imagesweserv
  namespace: default
spec:
  selector:
    app: imagesweserv
  ports:
  - name: imagesweserv
    port: 80
