default/imagesweserv/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: imagesweserv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - w.desertbluffs.com
  rules:
    - host: w.desertbluffs.com
      http:
        paths:
          - backend:
              serviceName: imagesweserv
              servicePort: 80
