default/imagesweserv/00networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: imagesweserv
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: imagesweserv
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
